; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cddl/contrib/opensolaris/uts/common/fs/zfs/extr_dsl_dataset.c_dsl_dataset_activate_feature.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cddl/contrib/opensolaris/uts/common/fs/zfs/extr_dsl_dataset.c_dsl_dataset_activate_feature.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }
%struct.TYPE_4__ = type { i32*, i32* }

@spa_feature_table = common dso_local global %struct.TYPE_3__* null, align 8
@ZFEATURE_FLAG_PER_DATASET = common dso_local global i32 0, align 4
@DMU_OT_DSL_DATASET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i64, i32*)* @dsl_dataset_activate_feature to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dsl_dataset_activate_feature(i32 %0, i64 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  store i32* %2, i32** %6, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = call %struct.TYPE_4__* @dmu_tx_pool(i32* %10)
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 1
  %13 = load i32*, i32** %12, align 8
  store i32* %13, i32** %7, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = call %struct.TYPE_4__* @dmu_tx_pool(i32* %14)
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i32*, i32** %16, align 8
  store i32* %17, i32** %8, align 8
  store i32 0, i32* %9, align 4
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** @spa_feature_table, align 8
  %19 = load i64, i64* %5, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i64 %19
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* @ZFEATURE_FLAG_PER_DATASET, align 4
  %24 = and i32 %22, %23
  %25 = call i32 @VERIFY(i32 %24)
  %26 = load i32*, i32** %7, align 8
  %27 = load i64, i64* %5, align 8
  %28 = load i32*, i32** %6, align 8
  %29 = call i32 @spa_feature_incr(i32* %26, i64 %27, i32* %28)
  %30 = load i32*, i32** %8, align 8
  %31 = load i32, i32* %4, align 4
  %32 = load i32, i32* @DMU_OT_DSL_DATASET, align 4
  %33 = load i32*, i32** %6, align 8
  %34 = call i32 @dmu_object_zapify(i32* %30, i32 %31, i32 %32, i32* %33)
  %35 = load i32*, i32** %8, align 8
  %36 = load i32, i32* %4, align 4
  %37 = load %struct.TYPE_3__*, %struct.TYPE_3__** @spa_feature_table, align 8
  %38 = load i64, i64* %5, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %37, i64 %38
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 4
  %42 = load i32*, i32** %6, align 8
  %43 = call i32 @zap_add(i32* %35, i32 %36, i32 %41, i32 4, i32 1, i32* %9, i32* %42)
  %44 = call i32 @VERIFY0(i32 %43)
  ret void
}

declare dso_local %struct.TYPE_4__* @dmu_tx_pool(i32*) #1

declare dso_local i32 @VERIFY(i32) #1

declare dso_local i32 @spa_feature_incr(i32*, i64, i32*) #1

declare dso_local i32 @dmu_object_zapify(i32*, i32, i32, i32*) #1

declare dso_local i32 @VERIFY0(i32) #1

declare dso_local i32 @zap_add(i32*, i32, i32, i32, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
